# mostly-harmless

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CODE_OF_CONDUCT.md  FXPluginTutorial_8md.html  LICENSE  README.md  README_8md.html  annotated.html  annotated_dup.js  classes.html  classmarvin_1_1containers_1_1FixedCircularBuffer-members.html  classmarvin_1_1containers_1_1FixedCircularBuffer.html  classmarvin_1_1containers_1_1FixedCircularBuffer.js  classmarvin_1_1containers_1_1StrideView-members.html  classmarvin_1_1containers_1_1StrideView.html  classmarvin_1_1containers_1_1StrideView.js  classmarvin_1_1containers_1_1StrideView_1_1const__iterator-members.html  classmarvin_1_1containers_1_1StrideView_1_1const__iterator.html  classmarvin_1_1containers_1_1StrideView_1_1const__iterator.js  classmarvin_1_1containers_1_1StrideView_1_1iterator-members.html  classmarvin_1_1containers_1_1StrideView_1_1iterator.html  classmarvin_1_1containers_1_1StrideView_1_1iterator.js  classmarvin_1_1containers_1_1SwapBuffer-members.html  classmarvin_1_1containers_1_1SwapBuffer.html  classmarvin_1_1containers_1_1SwapBuffer.js  classmarvin_1_1containers_1_1fifos_1_1SPSC-members.html  classmarvin_1_1containers_1_1fifos_1_1SPSC.html  classmarvin_1_1containers_1_1fifos_1_1SPSC.js  classmarvin_1_1dsp_1_1DelayLine-members.html  classmarvin_1_1dsp_1_1DelayLine.html  classmarvin_1_1dsp_1_1DelayLine.js  classmarvin_1_1dsp_1_1filters_1_1Biquad-members.html  classmarvin_1_1dsp_1_1filters_1_1Biquad.html  classmarvin_1_1dsp_1_1filters_1_1Biquad.js  classmarvin_1_1dsp_1_1filters_1_1LPF-members.html  classmarvin_1_1dsp_1_1filters_1_1LPF.html  classmarvin_1_1dsp_1_1filters_1_1LPF.js  (+574 more)
.github/workflows/: doygen-ghpages.yml  framework-tests.yml
boilerplate/: Engine.cpp  Engine.h  Entry.h  Plugin.cpp  Plugin.h  SharedState.cpp  SharedState.h
boilerplate/effect-plugin/: CMakeLists.txt  PluginProcessor.cpp  PluginProcessor.h
boilerplate/effect-plugin/source/: PluginProcessor.cpp  PluginProcessor.h
boilerplate/no_gui/: CMakeLists.txt  Entry.cpp
boilerplate/raw_gui/: CMakeLists.txt  Editor.cpp  Editor.h  Entry.cpp
boilerplate/web_gui/: CMakeLists.txt  Editor.cpp  Editor.h  Entry.cpp
cmake/: mostly_harmless.cmake  mostlyharmless_BinaryData.cpp  mostlyharmless_BinaryData.h  mostlyharmless_Descriptor.cpp  serialise.cpp
docs/: CMakeLists.txt  FXPluginTutorial.md  mostlyharmless_NamespaceDocs.h
examples/delay/: CMakeLists.txt
examples/delay/delay-gui/: index.html  package-lock.json  package.json  vite.config.js
examples/delay/delay-gui/src/: App.css  App.jsx  SliderComponent.jsx  index.css
examples/delay/source/: Delay.cpp  Delay.h  Parameters.cpp  Parameters.h  Plugin.cpp  Plugin.h  PluginEditor.cpp  PluginEditor.h  delay_Editor.cpp  delay_Editor.h  delay_Engine.cpp  delay_Engine.h  delay_Entry.cpp  delay_Entry.h  delay_SharedState.cpp  delay_SharedState.h
examples/gain/: CMakeLists.txt
examples/gain/gain-gui/: README.md  index.html  package-lock.json  package.json  vite.config.js
examples/gain/gain-gui/src/: App.css  App.jsx  SliderComponent.jsx  index.css
examples/gain/resources/: placeholder.txt  placeholder2.txt
examples/gain/source/: Gain.cpp  Gain.h  GainEditor.cpp  GainEditor.h  Parameters.h  gain_Editor.cpp  gain_Editor.h  gain_Engine.cpp  gain_Engine.h  gain_Entry.cpp  gain_Entry.h  gain_SharedState.cpp  gain_SharedState.h
examples/gain2/: CMakeLists.txt
examples/gain2/gain2-gui/: index.html  package-lock.json  package.json  vite.config.js
examples/gain2/gain2-gui/src/: App.jsx  SliderComponent.jsx
examples/gain2/source/: gain2_Editor.cpp  gain2_Editor.h  gain2_Engine.cpp  gain2_Engine.h  gain2_PluginEntry.cpp  gain2_PluginEntry.h  gain2_SharedState.cpp  gain2_SharedState.h
examples/synth/: CMakeLists.txt
examples/synth/source/: synth_Editor.cpp  synth_Editor.h  synth_Engine.cpp  synth_Engine.h  synth_Entry.cpp  synth_Entry.h  synth_Envelope.cpp  synth_Envelope.h  synth_Parameters.h  synth_SharedState.cpp  synth_SharedState.h  synth_Voice.cpp  synth_Voice.h
examples/synth/synth-gui/: index.html  package-lock.json  package.json  vite.config.js
examples/synth/synth-gui/src/: App.css  App.jsx  SliderComponent.jsx  index.css
include/mostly_harmless/: CMakeLists.txt  mostlyharmless_BusConfig.h  mostlyharmless_Concepts.h  mostlyharmless_Descriptor.h  mostlyharmless_Entry.h  mostlyharmless_EventContext.h  mostlyharmless_Parameters.h  mostlyharmless_Plugin.h  mostlyharmless_PluginBase.h  mostlyharmless_TransportState.h
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  classes_f.js  concepts_0.js  (+87 more)
source/: CMakeLists.txt  mostlyharmless_Entry.cpp  mostlyharmless_EventContext.cpp  mostlyharmless_Parameters.cpp  mostlyharmless_Plugin.cpp  mostlyharmless_PluginBase.cpp  mostlyharmless_TransportState.cpp
source/audio/: mostlyharmless_AudioHelpers.cpp
source/core/: mostlyharmless_BusLayout.cpp  mostlyharmless_IEditor.cpp  mostlyharmless_IPluginEntry.cpp  mostlyharmless_ISharedState.cpp  mostlyharmless_SharedStateContext.cpp
source/data/: mostlyharmless_DatabasePropertyListener.cpp  mostlyharmless_DatabasePropertyWatcher.cpp  mostlyharmless_DatabaseState.cpp
source/events/: mostlyharmless_EventContext.cpp  mostlyharmless_MidiEvent.cpp  mostlyharmless_ParamEvent.cpp  mostlyharmless_WebEvent.cpp
source/gui/: mostlyharmless_Colour.cpp  mostlyharmless_IEditor.cpp  mostlyharmless_PluginEditor.cpp  mostlyharmless_WebviewBase.cpp  mostlyharmless_WebviewEditor.cpp  mostlyharmless_Window.cpp
source/utils/: mostlyharmless_FlatBuffers.cpp  (+7 more)
tests/: CMakeLists.txt  mostlyharmless_TestCreatePluginImpl.cpp  mostlyharmless_TestDescriptor.cpp
(+47 files in other folders)
